--- a/src/absentee-voting.njk
+++ b/src/absentee-voting.njk
@@ -1,7 +1,14 @@
 ---
 title: U.S. Presidential Election
 layout: base
+eleventyNavigation:
+  key: U.S. Presidential Election
+  order: 10
 ---
+
+<div class="mb-5">
+    {% image 'assets/images/absentee-banner.png', 'long distance voter', 'img-fluid' %}
+</div>
 
 <p>The United States presidential election of 2016 falls on Tuesday, November 8. We know that the civic duty of voting is important to our attendees, and we strongly encourage you to plan ahead for absentee voting as you make your Forum plans. If this is your first time voting absentee, we recommend the information and services provided by VOTE.org (formerly <a href="http://www.longdistancevoter.org/">Long Distance Voter</a>), a non-partisan 501(3)(c) organization devoted to leveraging technology to remove barriers to voting.</p>
 
