--- a/src/cfp.njk
+++ b/src/cfp.njk
@@ -1,4 +1,9 @@
 ---
 title: Call for Proposals
 layout: base
+eleventyNavigation:
+  key: Call for Proposals
+  url: https://www.diglib.org/call-for-proposals-2016-dlf-forum/
+  order: 13
+permalink: false
 ---
