--- a/src/fellowships.njk
+++ b/src/fellowships.njk
@@ -1,8 +1,102 @@
 ---
 title: Fellowships
 layout: presentation
-image: /assets/images/Capilano-Suspension-Bridge-w-tag.jpg
 eleventyNavigation:
   key: Fellowships
-  order: 6
+  order: 14
 ---
+
+<div class="mb-5">
+  {% image 'assets/images/2016-Forum-Fellows-Text.png', 'DLF Welcome Fellows', 'img-fluid' %}
+</div>
+
+<p>Together with our generous sponsors and partners, the Digital Library Federation again offered a number of fellowship opportunities meant to enable attendance of a more diverse and inclusive group of practitioners at the <a href="/">2016 DLF Forum</a> in Milwaukee, Wisconsin. Our Forum Fellows’ presence greatly enriched conversations there.</p>
+<p>
+  <a href="https://www.diglib.org/meet-most-of-our-2016-dlf-forum-fellows/">Meet our first 12 Forum Fellows</a> and <a href="https://www.diglib.org/2016-fellows-part-ii/">our second group!</a>
+</p>
+<p>
+  <strong>ARL+DLF Forum Fellows</strong>
+</p>
+<ul>
+  <li>Tatiana Bryant</li>
+  <li>Hoan-Vu Do</li>
+  <li>Marge Huang</li>
+  <li>Cat Phan</li>
+  <li>Adam M. Townes</li>
+</ul>
+<p>
+  <strong>DLF Students &amp; New Professionals Fellows</strong>
+</p>
+<ul>
+  <li>Cameron Cook</li>
+  <li>Megan De Armond</li>
+  <li>Nik Dragovic</li>
+  <li>Alissa Matheny Helms</li>
+  <li>Audrey Sage</li>
+  <li>Camille Thomas</li>
+</ul>
+<p>
+  <strong>Library Juice+DLF Forum Fellow</strong>
+</p>
+<ul>
+  <li>Laura Capell</li>
+</ul>
+<p>
+  <strong>Kress+DLF GLAM Cross-Pollinator Fellows</strong>
+</p>
+<ul>
+  <li>Sherri Berger</li>
+  <li>Brenna Campbell</li>
+  <li>Lisa Goldberg</li>
+  <li>Stacy R. Williams</li>
+  <li>Karina Wratschko</li>
+</ul>
+<p>
+  <strong>Force11+DLF Cross-Pollinator Fellow</strong>
+</p>
+<ul>
+  <li>Hue Thi Pham</li>
+</ul>
+<p>
+  <strong>AMIA+DLF Virtual Cross-Pollinator Fellows</strong>
+</p>
+<ul>
+  <li>Sarah Barsness</li>
+  <li>Ethan Gates</li>
+  <li>Lorena Ramerez-Lopez</li>
+  <li>Rachel Mattson</li>
+</ul>
+<p>Calls are currently <strong>closed</strong> for:</p>
+<ul>
+  <li>
+    <a href="https://www.diglib.org/2016-arldlf-forum-fellowships/">ARL+DLF Forum Fellowships</a> (formerly “Forum Fellowships for Under-represented Groups”)</li>
+  <li>
+    <a href="https://www.diglib.org/dlf-forum-fellowships-for-students-new-professionals/">DLF Forum Fellowships for Students and New Professionals</a>
+  </li>
+  <li>
+    <a href="https://www.diglib.org/2016-library-juice-dlf-forum-fellowship/">DLF+Library Juice Forum Fellowship</a>
+  </li>
+  <li>
+    <a href="https://www.diglib.org/2016-fellows-part-ii/">DLF+Kress GLAM Forum Fellows</a>
+  </li>
+  <li>DLF+AMIA ‘<a href="https://www.diglib.org/amia-dlf-virtual-cross-pollinators/">Virtual Cross-Pollinators</a>‘</li>
+</ul>
+<p>Applications are <strong>now open</strong> for an exciting set of reciprocal <a href="https://www.diglib.org/opportunities/fellowships/">cross-pollinator fellowships</a> with other conferences (AIC and VRA).</p>
+
+
+<h3 class="py-4 border-top">Thank you to our partnering sponsors!</h3>
+
+{% image 'assets/images/ARL_logo_2c.png', 'ARL Logo', 'img-fluid' %}
+{% image 'assets/images/LJA-Logo.png', 'ARL Logo', 'img-fluid' %}
+<a href="libraryjuicepress.com">
+  {% image 'assets/images/741018_10151180099466035_1901121131_o.jpg', 'LibraryJuice Logo', 'img-fluid' %}
+</a>
+
+<a href="https://www.force11.org/">
+  {% image 'assets/images/FORCE11.png', 'Force11 Logo', 'img-fluid' %}
+</a>
+
+<a href="http://www.kressfoundation.org/">
+  {% image 'assets/images/KressFoundation.png', 'Kress Foundation Logo', 'img-fluid' %}
+</a>
+
