--- a/src/hotel-travel.njk
+++ b/src/hotel-travel.njk
@@ -1,6 +1,9 @@
 ---
 title: Hotel & Travel
 layout: base
+eleventyNavigation:
+  key: Hotel & Travel
+  order: 7
 ---
 <div class="mb-5">
     {% image 'assets/images/hotel-exteriorawning.jpg', 'Pfister Hotel', 'img-fluid' %}
