--- a/src/ndsa-digipres16.njk
+++ b/src/ndsa-digipres16.njk
@@ -1,6 +1,9 @@
 ---
 title: NDSA's Digital Preservation 2016
 layout: base
+eleventyNavigation:
+  key: NDSA's Digital Preservation 2016
+  order: 11
 ---
 <div class="mb-5">
     {% image 'assets/images/NDSA-Logo-4-color-01.jpg', 'NDSA logo', 'img-fluid' %}
