--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -31,6 +31,7 @@
 			<main role="main" class="container bg-white">
 				<div class="row p-3 mt-3">
 					<div class="col-md-8">
+						<h2 class='text-muted'>{{title}}</h2>
 						{{ content | safe }}
 					</div>
 					<aside class="col-md-4">
@@ -39,13 +40,13 @@
 							<div class="p-3">
 								{% include 'navigation.njk' %}
 							</div>
-							<div class="p-3">
-								<h4>Sing up for Forum News</h4>
+							{# <div class="p-3">
+								<h4>Sign up for Forum News</h4>
 								<p><a href="http://eepurl.com/baReNX">Subscribe</a> to our DLF Forum news mailing list. We will never share your information.</p>
-							</div>
+							</div> 
 							<div class="p-3">
 								{% include 'planning-committee.njk' %}
-							</div>
+							</div>#}
 							<div class="p-3">
 								<h4>Forum Tweets</h4>
 								<p>Use the hash tag <a href="http://twitter.com/#%21/search/realtime/%23dlfforum">#dlfforum</a> to tweet about the DLF Forum!</p>
