--- a/src/dlflac.njk
+++ b/src/dlflac.njk
@@ -2,9 +2,12 @@
 layout: base
 title: DLF Liberal Arts Colleges Pre-Conference
 image: /assets/images/Pinnacle_Exterior-ed.jpg
+eleventyNavigation:
+  key: DLF Liberal Arts Colleges Pre-Conference
+  order: 12
 ---
 
-<p>The Digital Library Federation will host a second <strong>DLF Liberal Arts Colleges Pre-Conference </strong>on November 6, 2016, in Milwaukee, Wisconsin, preceding this year’s <a href="https://web.archive.org/web/20170505004943/https://www.diglib.org/forums/2016forum">DLF Forum</a>.</p>
+<p>The Digital Library Federation will host a second <strong>DLF Liberal Arts Colleges Pre-Conference </strong>on November 6, 2016, in Milwaukee, Wisconsin, preceding this year’s <a href="/">DLF Forum</a>.</p>
 <p>This will be a one day meeting specifically created for those who work with digital libraries and/or digital scholarship at liberal arts colleges. The event is designed to foster conversation and build community, both formally and informally. Participants do not need to be members of DLF.</p>
 <h3>Details</h3>
 <p>
@@ -12,13 +15,13 @@ image: /assets/images/Pinnacle_Exterior-ed.jpg
     <strong>Where:</strong> Pfister Hotel, Milwaukee<br>
     <strong>Registration: </strong>$50 (includes a hot lunch and coffee breaks)</p>
 <h3>Program</h3>
-<p>The <a href="/dlflac/cfp/">CFP</a> closed May 23, and the <a href="https://web.archive.org/web/20170505004943/https://www.conftool.pro/dlf2016/sessions.php">full program</a> is available now!</p>
+<p>The <a href="/dlflac/cfp/">CFP</a> closed May 23, and the <a href="https://www.conftool.pro/dlf2016/sessions.php">full program</a> is available now!</p>
 <h3>Keynote Speaker</h3>
-<p>Jarrett M. Drake, Digital Archivist at Princeton University’s Seeley G. Mudd Manuscript Library, <a href="https://web.archive.org/web/20170505004943/https://www.diglib.org/archives/12173/">will open the day with a keynote</a> focusing on “the role of college and university archives in documenting and dialoguing dissent student activism on campus.”</p>
+<p>Jarrett M. Drake, Digital Archivist at Princeton University’s Seeley G. Mudd Manuscript Library, <a href="https://www.diglib.org/forums/2016forum/dlflac/">will open the day with a keynote</a> focusing on “the role of college and university archives in documenting and dialoguing dissent student activism on campus.”</p>
 <h3>Registration</h3>
 <p>
     <strong>
-        <a href="https://web.archive.org/web/20170505004943/https://www.diglib.org/forums/2016forum/registration/">Registration</a> is open now</strong> and <a href="https://web.archive.org/web/20170505004943/https://www.diglib.org/forums/2016forum/hotel-travel/">room bookings are available</a> at Milwaukee’s historic <a href="https://web.archive.org/web/20170505004943/http://www.thepfisterhotel.com/">Pfister Hotel</a>. (We encourage early room reservations!) Information on registration for the DLF Forum and Digital Preservation 2016 is <a href="https://web.archive.org/web/20170505004943/https://www.diglib.org/forums/2016forum/registration/">also available</a>.</p>
+        <a href="/registration/">Registration</a> is open now</strong> and <a href="/hotel-travel/">room bookings are available</a> at Milwaukee’s historic <a href="http://www.thepfisterhotel.com/">Pfister Hotel</a>. (We encourage early room reservations!) Information on registration for the DLF Forum and Digital Preservation 2016 is <a href="/registration/">also available</a>.</p>
 <h3>Planning Committee</h3>
 <ul>
     <li>Angie Beiriger, Reed College</li>
@@ -31,4 +34,5 @@ image: /assets/images/Pinnacle_Exterior-ed.jpg
     <li>Chelcie Rowell (chair), Wake Forest University</li>
 </ul>
 <h3>Past Programs</h3>
-<p>The <a href="https://web.archive.org/web/20170505004943/https://www.diglib.org/forums/2015forum/affiliated-events/dlflac/">first DLF Liberal Arts College Preconference</a> was held before the DLF Forum 2015, on October 25, 2015, in Vancouver, BC. The program is <a href="https://web.archive.org/web/20170505004943/https://dlfforum2015.sched.org/overview/type/liberal+arts+colleges+preconference">available online</a>.</p>
+<p>The <a href="/affiliated-events/dlflac/">first DLF Liberal Arts College Preconference</a> was held before the DLF Forum 2015, on October 25, 2015, in Vancouver, BC. The program is <a href="https://dlfforum2015.sched.org/overview/type/liberal+arts+colleges+preconference">available online</a>.
+</p>
