--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -5,12 +5,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>{{ title or metadata.title }}</title>
 		<meta name="description" content="{{ description or metadata.description }}">
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>		<link href="{{ '/assets/css/main.css' | url }}" rel="stylesheet">
 		<style>
 			.jumbotron {
-				{%- set bg = image | default( metadata.image )-%}
-	
+				{%- set bg = image | default( metadata.image ) -%}
+
 				background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("{{ bg | url }}");
 
 				/* Set a specific height */
@@ -21,11 +19,11 @@
 				background-repeat: no-repeat;
 				background-size: cover;
 				position: relative;
-				}
+			}
 		</style>
 	</head>
 	<body class="bg-burgundy">
-			<div class="container bg-white">
+		<div class="container bg-white">
 			{% include 'header.njk' %}
 
 			<main role="main" class="container bg-white">
@@ -36,10 +34,21 @@
 					</div>
 					<aside class="col-md-4">
 						<div class="position-sticky" style="top: 2rem;">
-							
+
+							<div class="p-4 my-4 box">
+								<link href="/pagefind/pagefind-ui.css" rel="stylesheet"/>
+								<script src="/pagefind/pagefind-ui.js"></script>
+								<div id="search"></div>
+								<script>
+									window.addEventListener('DOMContentLoaded', (event) => {
+										new PagefindUI({element: '#search', showSubResults: true})
+									})
+								</script>
+							</div>
 							<div class="p-3">
 								{% include 'navigation.njk' %}
 							</div>
+
 							{# <div class="p-3">
 								<h4>Sign up for Forum News</h4>
 								<p><a href="http://eepurl.com/baReNX">Subscribe</a> to our DLF Forum news mailing list. We will never share your information.</p>
@@ -60,9 +69,7 @@
 				</div>
 			</main>
 			{% include 'footer.njk' %}
-			</div>
-			<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-
+		</div>
+		<script type="module" src="{{ '/assets/js/main.js' | url }}"></script>
 	</body>
 </html>
