Updates to the scroll

--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -23,6 +23,9 @@
 		</style>
 	</head>
 	<body class="bg-burgundy">
+		<button type="button" class="btn btn-danger btn-lg" id="btn-back-to-top">
+      	<i class="bi bi-arrow-up"></i>
+    </button>
 		<div class="container bg-white">
 			{% include 'header.njk' %}
 
